# wikimap

./: .gitignore  CHANGELOG.md  README.ko.md  README.md  bench.py  pyproject.toml  tests.py  wikimap.py
.github/workflows/: ci.yml  publish.yml
