[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "wikimap"
dynamic = ["version"]
description = "Zero-LLM incremental index and lazy semantic notes for personal knowledge vaults (markdown, HTML, PDF, images)"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "Donghyun Ha" }]
keywords = ["knowledge-base", "wiki", "obsidian", "search", "index", "vault", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Indexing",
]

[project.scripts]
wikimap = "wikimap:main"

[project.urls]
Homepage = "https://github.com/dhha22/wikimap"
Repository = "https://github.com/dhha22/wikimap"
Issues = "https://github.com/dhha22/wikimap/issues"

[tool.setuptools]
py-modules = ["wikimap"]

[tool.setuptools.dynamic]
version = { attr = "wikimap.VERSION" }
